更新 Dockerfile 和 handler.py，调整 ComfyUI 相关配置，克隆 worker-comfyui 和 ComfyUI，安装依赖并设置启动脚本。修改 extra_model_paths.yaml 的路径配置以适应新结构。

--- a/src/extra_model_paths.yaml
+++ b/src/extra_model_paths.yaml
@@ -1,6 +1,6 @@
 runpod_worker_comfy:
-  base_path: /runpod-volume
-  checkpoints: models/checkpoints/
+  base_path: /workspace/models
+  checkpoints: /workspace/models/ckpts/
   clip: models/clip/
   clip_vision: models/clip_vision/
   configs: models/configs/
@@ -10,3 +10,6 @@ runpod_worker_comfy:
   upscale_models: models/upscale_models/
   vae: models/vae/
   unet: models/unet/
+
+custom_nodes_path:
+  - /ComfyUI/custom_nodes
